@@ -1,10 +1,11 @@
-# $NetBSD: Makefile,v 1.61 2022/12/18 09:28:31 mef Exp $
+# $NetBSD: Makefile,v 1.62 2022/12/18 12:53:18 mef Exp $
 #
 
 COMMENT=	Benchmarking tools
 
 SUBDIR+=	R-bench
 SUBDIR+=	R-microbenchmark
+SUBDIR+=	R-mlbench
 SUBDIR+=	R-profmem
 SUBDIR+=	R-profvis
 SUBDIR+=	R-rbenchmark
