@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2022,v 1.6238 2022/12/18 12:39:02 mef Exp $
+$NetBSD: CHANGES-2022,v 1.6239 2022/12/18 12:53:18 mef Exp $
 
 Changes to the packages collection and infrastructure in 2022:
 
@@ -9357,3 +9357,5 @@ Changes to the packages collection and infrastructure in 2022:
 	Updated math/R-energy to 1.7.10 [mef 2022-12-18]
 	Updated math/R-compositions to 2.0.4 [mef 2022-12-18]
 	Updated math/R-geoR to 1.9.2 [mef 2022-12-18]
+	Added parallel/R-doParallel version 1.0.17 [mef 2022-12-18]
+	Added benchmarks/R-mlbench version 2.1.3 [mef 2022-12-18]
